--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,13 +19,15 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
             android:padding="12dp"
-            android:textStyle="bold"
             android:text="@string/main_activity_title"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
+            tools:itemCount="4"
+            tools:listitem="@layout/item_todo"
             android:layout_height="match_parent"
             android:layout_below="@id/txt_today"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
